lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_choice_collision.snap
---
source: lib/src/sdk/python/mod.rs
expression: types
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional


BuildEnvChoice = Literal["debug", "release"]
DeployEnvChoice = Literal["staging", "production"]


@dataclass
class BuildArgs:
    # Build environment
    env: BuildEnvChoice


@dataclass
class DeployArgs:
    # Deploy environment
    env: DeployEnvChoice
