lib/src/sdk/python/snapshots/usage__sdk__python__tests__python_config_and_flag_edge_cases.snap
---
source: lib/src/sdk/python/mod.rs
expression: types
---
# @generated by usage-cli from test.usage.kdl. Do not edit manually.
from __future__ import annotations
from dataclasses import dataclass
from typing import Literal, Optional



@dataclass
class MyappArgs:
    # Input file
    _input: str


@dataclass
class MyappFlags:
    # Reserved keyword. Deprecated: Use --kind
    _type: Optional[bool] = None
    # Flag with short and long alias. Aliases: fmt. Short: -f
    _format: Optional[str] = None
    # Short-only flag. Short: -v
    v: Optional[bool] = None


@dataclass
class MyappConfig:
    host: str
    # Enable debug mode
    debug: bool = True
    port: int = 8080
    rate: float = 1.5
